fix: text-align left on Home aside

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -15,6 +15,10 @@
   p.buttons {
     margin-top: 50px;
   }
+
+  aside {
+    text-align: left;
+  }
 }
 
 .home {
